[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
futures = "0.3.30"
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
server = {path = "../server"}
