[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
warp = "0.3.7"
