[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", features = ["tokio-io"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
url = "2.5.2"
server = {path = "../server"}
serde_json = "1.0.120"
